@@ -317,7 +317,6 @@ table.small {
 	background-color: #f9f9f9;
 	padding: 5px;
 	font-size: 95%;
-	text-align: center;
 }
 #toc h2,
 .toc h2 {
@@ -326,6 +325,12 @@ table.small {
 	padding: 0;
 	font-size: 100%;
 	font-weight: bold;
+}
+#toc #toctitle,
+.toc #toctitle,
+#toc .toctitle,
+.toc .toctitle {
+	text-align: center;
 }
 #toc ul,
 .toc ul {
